# HIVE

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  MASTER-PLAN.md  OllamaConfig.md  PLAN.md  README.md  VISION.md  _play_test.py  _premium_play_test.py  _spotify_playlist_run.py  _spotify_playlist_test.py  docker-compose.yml  hive-ink.cmd  main.py  pyproject.toml  requirements.txt  run_server.bat  setup.py  test_all_security.py  test_browser_smoke.py  test_browser_use.py  test_imports.py
.github/workflows/: ci.yml
.hive-test/playbooks/: amazon.com.json  example.com.json
agents/: agent_forge.py  cleanup_crew.py  debate_protocol.py  judge.py  leader.py  safety_agent.py
agents/workers/: account_manager.py  cloud_tester.py  code_architect.py  code_runner.py  communicator.py  data_analyst.py  diagnostician.py  gpu_tuner.py  payment_agent.py  red_team.py  report_agent.py  scheduler.py  web_scout.py  (+1 more)
benchmarks/: adversarial.py  conflict_resolution.py  fault_tolerance.py  memory_pressure.py  single_vs_multi.py  stress_test.py
core/: agent_isolation.py  agent_personality.py  agent_state.py  arena.py  audit_logger.py  behavior_monitor.py  checkpoint_manager.py  config.py  dashboard_events.py  demo_mode.py  economy.py  input_validator.py  llm_router.py  memory_manager.py  message_auth.py  message_bus.py  output_filter.py  safety_ratchet.py  single_vs_multi.py  task_queue.py
db/: checkpoints.db  models.py
docs/: DEMO_VIDEO.md  GO_LIVE.md  SUBMISSION.md  demo-slides.html
frontend/: DESIGN.md  agents.html  app.js  arena.html  benchmarks.html  dashboard.html  economy.html  index.html  styles.css  tasks.html  terminal.html
frontend-next/: next.config.ts  package-lock.json  package.json  start-frontend.bat
hive/: __init__.py  __main__.py  cli.py  config.py  creator.py  dashboard.py  deploy_server.py  interactive.py  leader.py  llm.py  main.py  memory.py  permissions.py  playbooks.py  presentation.py  runtime.py  storage.py  swarm_viz.py  theme.py  tools.py
hive-frontend/: package.json  pnpm-lock.yaml  tsconfig.json
scripts/: bootstrap_alibaba_sas.sh  docker_entrypoint.sh  verify_qwen_key.py
tests/: conftest.py  test_checkout_gates.py  test_email_codes.py  test_hive.py  test_interactive.py  test_playbooks.py  test_presentation.py  test_routing.py  test_security.py  test_vault.py
(+247 files in other folders)
