[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-os"
version = "0.1.0"
description = "HIVE OS — AI Operating System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "openai>=1.50.0",
]

[project.scripts]
hive = "hive.main:main"

[tool.setuptools.packages.find]
include = ["hive*"]
